--- a/assets/css/loginStyle.css
+++ b/assets/css/loginStyle.css
@@ -1,43 +1,76 @@
-#main-container {
-  background-color: #535353;
-  max-height: 90vh;
-  overflow: auto;
+@font-face {
+  font-family: "Circular";
+  src: url(../fonts/CircularStd-Light.otf);
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Circular";
+  src: url(../fonts/CircularStd-LightItalic.otf);
+  font-weight: 300;
+  font-style: italic;
+}
+@font-face {
+  font-family: "Circular";
+  src: url(../fonts/CircularStd-Book.otf);
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Circular";
+  src: url(../fonts/CircularStd-BookItalic.otf);
+  font-weight: 400;
+  font-style: italic;
+}
+@font-face {
+  font-family: "Circular";
+  src: url(../fonts/CircularStd-Medium.otf);
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Circular";
+  src: url(../fonts/CircularStd-MediumItalic.otf);
+  font-weight: 500;
+  font-style: italic;
+}
+@font-face {
+  font-family: "Circular";
+  src: url(../fonts/CircularStd-MediumItalic.otf);
+  font-weight: 500;
+  font-style: italic;
+}
+@font-face {
+  font-family: "Circular";
+  src: url(../fonts/CircularStd-Bold.otf);
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Circular";
+  src: url(../fonts/CircularStd-BoldItalic.otf);
+  font-weight: 700;
+  font-style: italic;
+}
+@font-face {
+  font-family: "Circular";
+  src: url(../fonts/CircularStd-Black.otf);
+  font-weight: 900;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Circular";
+  src: url(../fonts/CircularStd-BlackItalic.otf);
+  font-weight: 900;
+  font-style: italic;
 }
 
-svg {
-  fill: white;
+* {
+  font-size: 14px;
 }
-
-svg:hover {
-  fill: green;
-}
-
-#play {
-  background: white;
-}
-
-#play svg {
-  fill: black;
-}
-
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-::-webkit-scrollbar-track {
-  background: #535353;
-}
-
-::-webkit-scrollbar-thumb {
-  background: black;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: #555;
-}
-
-footer {
-  background-color: #535353;
+body {
+  font-family: "Circular";
+  font-style: normal;
 }
 
 #logoSpotify {
@@ -47,4 +80,27 @@ footer {
 
 .login {
   width: 450px;
+}
+
+#google {
+  background: url(https://accounts.scdn.co/sso/images/google-icon.1cdc8fce9609d07f0e9d8d0bc4b61f8f.svg) center no-repeat;
+  width: 1.5rem;
+}
+
+#spacer1,
+#spacer2 {
+  width: 200px;
+  display: inline-block;
+}
+
+#accedi {
+  background-color: #1ed760;
+}
+
+#accedi:hover {
+  scale: 1.1;
+}
+
+.spacing {
+  letter-spacing: 1px;
 }
