--- a/assets/css/album-page.css
+++ b/assets/css/album-page.css
@@ -1,138 +1,152 @@
 @font-face {
-    font-family: "Circular";
-    src: url('../fonts/CircularStd-Light.otf');
-    font-weight: 300;
-    font-style: normal;
+  font-family: "Circular";
+  src: url("../fonts/CircularStd-Light.otf");
+  font-weight: 300;
+  font-style: normal;
 }
 @font-face {
-    font-family: "Circular";
-    src: url('../fonts/CircularStd-LightItalic.otf');
-    font-weight: 300;
-    font-style: italic;
+  font-family: "Circular";
+  src: url("../fonts/CircularStd-LightItalic.otf");
+  font-weight: 300;
+  font-style: italic;
 }
 @font-face {
-    font-family: "Circular";
-    src: url('../fonts/CircularStd-Book.otf');
-    font-weight: 400;
-    font-style: normal;
+  font-family: "Circular";
+  src: url("../fonts/CircularStd-Book.otf");
+  font-weight: 400;
+  font-style: normal;
 }
 @font-face {
-    font-family: "Circular";
-    src: url('../fonts/CircularStd-BookItalic.otf');
-    font-weight: 400;
-    font-style: italic;
+  font-family: "Circular";
+  src: url("../fonts/CircularStd-BookItalic.otf");
+  font-weight: 400;
+  font-style: italic;
 }
 @font-face {
-    font-family: "Circular";
-    src: url('../fonts/CircularStd-Medium.otf');
-    font-weight: 500;
-    font-style: normal;
+  font-family: "Circular";
+  src: url("../fonts/CircularStd-Medium.otf");
+  font-weight: 500;
+  font-style: normal;
 }
 @font-face {
-    font-family: "Circular";
-    src: url('../fonts/CircularStd-MediumItalic.otf');
-    font-weight: 500;
-    font-style: italic;
+  font-family: "Circular";
+  src: url("../fonts/CircularStd-MediumItalic.otf");
+  font-weight: 500;
+  font-style: italic;
 }
 @font-face {
-    font-family: "Circular";
-    src: url('../fonts/CircularStd-MediumItalic.otf');
-    font-weight: 500;
-    font-style: italic;
+  font-family: "Circular";
+  src: url("../fonts/CircularStd-MediumItalic.otf");
+  font-weight: 500;
+  font-style: italic;
 }
 @font-face {
-    font-family: "Circular";
-    src: url('../fonts/CircularStd-Bold.otf');
-    font-weight: 700;
-    font-style: normal;
+  font-family: "Circular";
+  src: url("../fonts/CircularStd-Bold.otf");
+  font-weight: 700;
+  font-style: normal;
 }
 @font-face {
-    font-family: "Circular";
-    src: url('../fonts/CircularStd-BoldItalic.otf');
-    font-weight: 700;
-    font-style: italic;
+  font-family: "Circular";
+  src: url("../fonts/CircularStd-BoldItalic.otf");
+  font-weight: 700;
+  font-style: italic;
 }
 @font-face {
-    font-family: "Circular";
-    src: url('../fonts/CircularStd-Black.otf');
-    font-weight: 900;
-    font-style: normal;
+  font-family: "Circular";
+  src: url("../fonts/CircularStd-Black.otf");
+  font-weight: 900;
+  font-style: normal;
 }
 @font-face {
-    font-family: "Circular";
-    src: url('../fonts/CircularStd-BlackItalic.otf');
-    font-weight: 900;
-    font-style: italic;
+  font-family: "Circular";
+  src: url("../fonts/CircularStd-BlackItalic.otf");
+  font-weight: 900;
+  font-style: italic;
 }
-
 
 body {
-    font-family: "Circular";
-    font-style: normal;
+  font-family: "Circular";
+  font-style: normal;
 }
 #main-container {
-    background: rgb(24, 21, 21);
-    background: linear-gradient(0deg, rgb(32, 28, 28) 40%, rgb(206, 180, 67) 82%);
-    max-height: 90vh;
-    overflow: auto;
+  background: rgb(24, 21, 21);
+  background: linear-gradient(0deg, rgb(32, 28, 28) 40%, rgb(206, 180, 67) 82%);
+  max-height: 90vh;
+  overflow: auto;
 }
 #album-img {
-    width: 200px;
-    height: 200px;
+  width: 200px;
+  height: 200px;
 }
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 .social {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    width: 40px;
-    height: 40px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 40px;
+  height: 40px;
 }
 ::-webkit-scrollbar {
-    width: 8px;
+  width: 8px;
 }
 
 ::-webkit-scrollbar-track {
-    background: black;
+  background: black;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #535353;
+  background: #535353;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #555;
+  background: #555;
 }
 
 footer {
-    background-color: #535353;
+  background-color: #535353;
 }
 
 @media screen and (max-width: 767px) {
-   #friends, #comments,#user-playlists,#three-dots {
+  #friends,
+  #comments,
+  #user-playlists,
+  #three-dots,
+  #icon {
     display: none;
-}
-#container-navbar{
-  position:fixed;
-  bottom:0;
-  
-}
-#footer{
-    bottom:190px;
-}
-#navbar-menu{
-    display:flex;
+  }
+  #container-navbar {
+    position: fixed;
+    bottom: 0;
+    padding: 0;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
+  }
+  #footer {
+    bottom: 95px;
+  }
+
+  #navbar-menu {
+    display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    
-}
-/* #navbar-menu li{
-    justify-content:space-evenly;
-} */
+    width: 100%;
+  }
 
+  #mobile-navbar {
+    display: flex;
+    justify-content: space-evenly;
+  }
 
+  #navbar-menu li {
+    margin-right: 22px;
+    flex-direction: column;
+  }
+
+  #navbar-menu svg {
+    margin-right: 12px;
+  }
 }
