--- a/assets/css/loginStyle.css
+++ b/assets/css/loginStyle.css
@@ -105,6 +105,15 @@ body {
   letter-spacing: 1px;
 }
 
+input[type="checkbox"]:checked {
+  background-color: #1ed760;
+}
+
+#showPass {
+  position: absolute;
+  right: 0px;
+}
+
 @media screen and (max-width: 767px) {
   body {
     font-size: 12px;
