--- a/assets/css/album-page.css
+++ b/assets/css/album-page.css
@@ -84,8 +84,16 @@ svg {
   fill: white;
 }
 
+#play svg {
+  fill: black;
+}
+
 svg:hover {
   fill: green;
+}
+
+#play {
+  background: white;
 }
 
 a {
