--- a/assets/css/album-page.css
+++ b/assets/css/album-page.css
@@ -112,7 +112,8 @@ footer {
   #playbackBar .playback-bar,
   #playback-progressbar,
   input,
-  #time {
+  #time,
+  #discover-more {
     display: none;
   }
 
