added album cards

--- a/assets/css/artist-style.css
+++ b/assets/css/artist-style.css
@@ -82,7 +82,8 @@ footer {
   #playbackBar .playback-bar,
   #playback-progressbar,
   input,
-  #time {
+  #time,
+  #discover-more {
     display: none;
   }
 
