fixed cover position

--- a/assets/css/artist-style.css
+++ b/assets/css/artist-style.css
@@ -50,8 +50,10 @@ footer {
   background-color: #535353;
 }
 
-#artistPage {
+#artistPage{
   background-image: url("../imgs/543670.jpg");
+  background-position: top;
+  box-sizing: content-box;
 }
 
 #popularArtistSongs ol {
