--- a/assets/css/artist-style.css
+++ b/assets/css/artist-style.css
@@ -60,7 +60,7 @@ footer {
   background-color: #535353;
 }
 
-#artistPage{
+#artistPagie{
   background-image: url("../imgs/543670.jpg");
   background-position: top;
   box-sizing: content-box;
