--- a/assets/css/album-page.css
+++ b/assets/css/album-page.css
@@ -41,7 +41,8 @@ body {
 
 #main-container {
   background: rgb(24, 21, 21);
-  background: linear-gradient(0deg, rgb(32, 28, 28) 40%, rgb(206, 180, 67) 82%);
+  background: linear-gradient(to bottom, rgb(206, 180, 67),rgb(32, 28, 28) 410px);
+  background-attachment: local;
   max-height: 90vh;
   overflow: auto;
 }
