--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+@import url(..//css/circular-font.css);
+
+body{
+  font-family: "Circular";
+  font-style: normal;
+}
+
 #main-container {
   background-color: #535353;
   max-height: 90vh;
