--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url(..//css/circular-font.css);
 
-body{
+body {
   font-family: "Circular";
   font-style: normal;
 }
@@ -175,6 +175,30 @@ a {
   }
   #heart-mobile {
     fill: rgb(29, 186, 29);
+  }
+}
+
+@media screen and (max-width: 991px) {
+  ::-webkit-scrollbar {
+    display: none;
+  }
+
+  ::-webkit-scrollbar-track {
+    display: none;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    display: none;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  #container-navbar {
+    display: none;
   }
 }
 
