Added artist albums

--- a/assets/css/artist-style.css
+++ b/assets/css/artist-style.css
@@ -86,8 +86,8 @@ footer {
   #playbackBar .playback-bar,
   #playback-progressbar,
   input,
-  #time,
-  #discover-more {
+  #time
+  {
     display: none;
   }
 
