--- a/assets/css/album-page.css
+++ b/assets/css/album-page.css
@@ -118,8 +118,8 @@ footer {
   #playbackBar .playback-bar,
   #playback-progressbar,
   input,
-  #time,
-  #discover-more {
+  #time
+  {
     display: none;
   }
 
